--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "dev": "next dev --turbo",
+    "ws": "node src/server/websocket-server.js",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "preview": "next build && next start",
@@ -20,15 +21,21 @@
     "format:check": "prettier --check \"**/*.{ts,tsx,js,jsx,mdx}\" --cache"
   },
   "dependencies": {
+    "@clerk/clerk-sdk-node": "^5.0.74",
     "@clerk/nextjs": "^6.7.1",
+    "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "better-react-mathjax": "2.0.4-beta1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "drizzle-orm": "^0.33.0",
+    "express": "^4.21.2",
+    "firebase": "^11.0.2",
     "geist": "^1.3.0",
     "katex": "^0.16.11",
     "lucide-react": "^0.468.0",
@@ -39,16 +46,23 @@
     "react-dom": "^18.3.1",
     "react-lucid": "^0.0.1",
     "react-mathjax2": "^0.0.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.18.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/eslint": "^8.56.10",
+    "@types/express": "^5.0.0",
     "@types/katex": "^0.16.7",
     "@types/node": "^20.14.10",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/ws": "^8.5.13",
     "@typescript-eslint/eslint-plugin": "^8.1.0",
     "@typescript-eslint/parser": "^8.1.0",
     "drizzle-kit": "^0.24.0",
