--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
+    "task-tackler-4": "file:",
     "ws": "^8.18.0",
     "zod": "^3.23.3"
   },
