--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@radix-ui/react-switch": "^1.1.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "better-react-mathjax": "2.0.4-beta1",
+    "cheerio": "^1.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
@@ -42,6 +43,7 @@
     "next": "^15.0.1",
     "next-themes": "^0.4.3",
     "postgres": "^3.4.4",
+    "puppeteer": "^23.11.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-lucid": "^0.0.1",
